feat: implements channel routes and message routes
